# ChainBridge

./: .gitignore  README.md
backend/: requirements.txt
backend/app/: main.py
backend/app/config/: __init__.py  database.py  redis.py  settings.py
backend/app/middleware/: __init__.py  auth.py  rate_limit.py
backend/app/models/: __init__.py  api_key.py  base.py  htlc.py  order.py  swap.py
backend/app/routes/: __init__.py  analytics.py  auth.py  htlc.py  orders.py  swaps.py  ws.py
backend/app/schemas/: __init__.py  auth.py  htlc.py  order.py  swap.py
backend/app/ws/: manager.py
backend/tests/: conftest.py  test_htlc.py  test_orders.py  test_root.py  test_swaps.py
docs/: ROADMAP_FOUNDATIONS.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/src/components/: ErrorBoundary.tsx  RealTimeManager.tsx
frontend/src/hooks/: useAuth.ts  useOrderBook.ts  useTransactions.ts  useWallet.ts  useWebSocket.ts
frontend/src/lib/: config.ts  explorers.ts  stellar.ts  transactionLifecycle.ts  utils.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts  wallet.ts
relayer/: Cargo.toml
relayer/src/: config.rs  main.rs  monitor.rs  proof.rs
relayer/src/monitor/: bitcoin.rs  ethereum.rs  stellar.rs
relayer/src/proof/: bitcoin_proof.rs  ethereum_proof.rs
smartcontract/src/: crypto.rs  error.rs  governance.rs  htlc.rs  lib.rs  liquidity.rs  optimization.rs  order.rs  referral.rs  storage.rs  swap.rs  test.rs  types.rs
(+41 files in other folders)
